<resources>
    <string name="app_name">Gamer Manager</string>
    <string name="alert_dialog_delete">ELIMINAR ENTRADA</string>
    <string name="alert_dialog_confirm_delete">¿Quiere eliminar la siguiente entrada de su lista?</string>
    <string name="alert_dialog_denied_delete">No eliminó la entrada</string>
    <string name="alert_dialog_delete_confirmed">Entrada eliminada</string>
    <string name="alert_dialog_no">NO</string>
    <string name="alert_dialog_yes">SÍ</string>
    <string name="introducir_imagen">Por favor introduzca una imagen de juego</string>
    <string name="no_imagen">Image not found</string>
    <string name="connection_error">Error de conexion, prueba a reiniciar la app</string>
    <string name="error_game_name_empty">Por favor introduzca un nombre</string>
    <string name="update_game">Actualizar Juego</string>
    <string name="viewto">Viendo a %1$s</string>
    <string name="password_updated">Contraseña Actualizada</string>
    <string name="status_updated">Privacidad Actualizada</string>
    <string name="password_dont_match">Las contraseñas no coinciden</string>
    <string name="fill_all_fields">Por favor rellena todos los campos</string>
    <string name="user_already_extis">El usuario ya existe</string>
    <string name="user_registered_success">Usuario registrado correctamente</string>
    <string name="status_select">Por favor selecciona un estado</string>
    <string name="select_platform">Por favor selecciona una plataforma</string>
    <string name="select_company">Por favor escribe el nombre de la compañia</string>
    <string name="select_genre">Por favor escribe un género</string>
    <string name="invalid_user_pass">Usuario o contraseña incorrectos</string>
    <string name="user_list">Lista de Usuarios</string>
    <string name="unfollow">No seguir</string>
    <string name="follow">Seguir</string>
    <string name="follow_status_followed">Ahora sigues al usuario</string>
    <string name="follow_status_unfollowed">Ya no sigues al usuario</string>
    <string name="is_your_follower">Te sigue</string>
    <string name="you_are_follow">Le sigues</string>
    <string name="connection_reconnect">Conexión reestablecida</string>
    <string name="select_points">Por favor selecciona una valoración</string>
    <string name="platform">Plataforma: %1$s</string>
    <string name="genre">Género: %1$s</string>
    <string name="company">Compañia: %1$s</string>
    <string name="register">Registro</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="show_password">Mostrar Contraseña</string>
    <string name="do_register">Registrar</string>
    <string name="save_session">Guardar Datos de Sesión</string>
    <string name="dologin">Login</string>
    <string name="doregister">Registrar</string>
</resources>